src/App.css
:root {
  --clr-primary: #0b0d17;
  --clr-secondary: #d0d6f9;
  --clr-accent: #ffffff;
}
html,
body {
  overflow: hidden;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  font-family: "Bellefair", serif;
}
.main-content {
  height: 100%;
  overflow: hidden;
}
.space {
  height: 100vh;
  padding: 1rem;
  background-image: url(./assets/home/background-home-desktop.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--clr-accent);
}
.nav-bar {
  display: flex;
  margin-left: 20px;
  height: 100px;
  align-items: center;
  justify-content: space-between;
}
.nav-img {
  width: 48px;
  height: 50px;
}
tr {
  border: 1px solid var(--clr-accent);
  width: 500px;
  opacity: 50%;
  z-index: 100;
  transform: translate(25%);
}
.nav-menu {
  width: 48%;
  background-color: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(7px);
  border-radius: 4px;
  height: 90%;
}
.nav-list {
  list-style: none;
  height: 100%;
  display: flex;
  gap: 2.5rem;
  justify-content: center;
  align-items: center;
}
.nav-list > li {
  display: flex;
  gap: 0.3rem;
  cursor: pointer;
  /* border-bottom: 3px solid white; */
  height: 90%;
  padding-top: 30px;
}
.nav-list > li > .li-num {
  font-weight: bolder;
}
.home {
  height: 550px;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  gap: 400px;
}
.space-question-div {
  width: 450px;
  height: 382px;
  font-size: 27px;
}
.space-question {
  color: var(--clr-secondary);
  font-family: Georgia, "Times New Roman", Times, serif;
}
.space-word {
  margin-top: 20px;
  margin-bottom: 25px;

  color: white;
  font-size: 130px;
  font-family: Georgia, "Times New Roman", Times, serif;
}
.space-paragraph {
  color: var(--clr-secondary);
}
.explore-button-div {
  height: 234px;
  width: 234px;
}
.explore {
  background: white;
  height: 100%;
  width: 100%;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
  font-size: 40px;
  cursor: pointer;
  transition: all 0.3s ease;
}
.explore:hover {
  box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.3);
}
.hamburger {
  width: 50px;
  height: 50px;
  cursor: pointer;
  transition: 0.5s ease;
  display: none;
}
.mobile-nav-menu {
  display: none;
}
.destination-page {
  padding: 50px;
  height: 100%;
}
.pick-destination-div {
  font-size: 28px;
  margin-left: 20px;
}
.destination-number {
  opacity: 60%;
}
.planet-capsule {
  height: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.planet-img-div {
  height: 445px;
  width: 445px;
}
.planet-selection-div {
  width: 445px;
  height: 472px;
}
.planet-button {
  background: none;
  border: none;
  color: white;
  width: 80px;
  align-self: flex-start;
  margin-bottom: 30px;
  cursor: pointer;
  padding-bottom: 10px;
  width: fit-content;
  font-size: 14px;
  margin-left: 20px;
  margin-right: 20px;
  padding-right: 2px;
}
.planet-name {
  font-size: 70px;
}
.planet-paragraph {
  color: var(--clr-secondary);
  margin-bottom: 30px;
  margin-top: 20px;
}
.planet-hr {
  border: 1px solid var(--clr-accent);
  width: 90%;
  margin-bottom: 10px;
}
.planet-information {
  display: flex;
  justify-content: center;
  gap: 20%;
  margin-right: 35px;
}
.planet-distance {
  display: flex;
  flex-direction: column;
}
.planet-arrival-time {
  display: flex;
  flex-direction: column;
}
.distance-span {
  color: var(--clr-secondary);
  font-size: 17px;
}
.arrival-span {
  color: var(--clr-secondary);
  font-size: 17px;
}
.arrival-data-span {
  font-size: 30px;
}
.crew-page {
  padding: 50px;
  height: 100%;
  display: flex;
  justify-content: space-between;
}
.img-hr {
  display: none;
}
.meet-your-crew {
  font-size: 28px;
  margin-left: 20px;
}
.meet-crew {
  opacity: 60%;
  margin-right: 15px;
}
.crew-information-panel {
  max-width: 45%;
}
.crew-image-panel {
  width: stretch;
  max-width: 55%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.crew-image-div {
  height: 550px;
  width: 550px;
  position: absolute;
  right: 50px;
  object-fit: cover;

  background-size: cover;
}
.commander-info {
  margin-top: 80px;
  display: flex;
  flex-direction: column;
}
.crew-title {
  font-size: 30px;
  opacity: 50%;
}
.crew-name {
  font-size: 50px;
  margin-top: 20px;
  margin-bottom: 30px;
}
.crew-paragraph {
  color: var(--clr-secondary);
  font-size: 18px;
  max-width: 444px;
}
.selectionPoint {
  height: 14px;
  width: 14px;
  background-color: white;
  border-radius: 50%;
  margin-right: 20px;
  cursor: pointer;
}
.selectionPoint:hover {
  background-color: rgba(132, 16, 16, 0.651);
}
.crew-selection-div {
  display: flex;
  padding: 1rem;
  padding-left: 0;
  position: absolute;
  bottom: 60px;
}
.technology-page {
  padding: 50px;
  height: 100%;
  display: flex;
}
.tech-image-panel {
  width: 515px;
  height: 527px;
}
.tech-info-panel {
  width: stretch;
}
.tech-number-div {
  font-size: 28px;
  margin-left: 20px;
}
.info-number {
  opacity: 60%;
}

.tech-desc-panel {
  display: flex;
  max-width: 80%;
  margin-top: 80px;
  gap: 60px;
}
.tech-info-button {
  width: 60px;
  height: 60px;
  /* background: white; */
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 19px;
  font-weight: bold;
  cursor: pointer;
  margin-bottom: 16px;
  transition: 0.5s ease;
}
.tech-info-button:hover {
  border: 1px solid rgba(255, 255, 255, 1);
}

.tech-description-panel {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 470px;
}
h6 {
  font-size: 29p;
  color: var(--clr-secondary);
}
.tech-name {
  margin-top: 10px;
  font-size: 40px;
  margin-bottom: 15px;
}
.tech-description {
  color: var(--clr-secondary);
  font-size: 18px;
  max-width: 100%;
}
/* ... */

